--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 
                 <div class="benefit-card">
                     <div class="benefit-icon">💰</div>
-                    <h3>Cena o desítky % nižší</h3>
+                    <h3>Férová cena</h3>
                     <p>Kvalitní web za zlomek běžné ceny bez kompromisů</p>
                 </div>
                 
