Add new reference

--- a/index.html
+++ b/index.html
@@ -706,6 +706,22 @@
                         Prohlédnout web
                     </a>
                 </div>
+                
+                <div class="portfolio-card">
+                    <div class="portfolio-header">
+                        <div class="portfolio-icon">📊</div>
+                        <div class="portfolio-info">
+                            <h3>DataPath by Dominik</h3>
+                            <p>Datová analýza & Školení</p>
+                        </div>
+                    </div>
+                    <p class="portfolio-description">
+                        Osobní web datového analytika s moderním designem, animacemi a responzivním rozhraním pro prezentaci služeb.
+                    </p>
+                    <a href="https://data-path.cz" target="_blank" class="portfolio-link">
+                        Prohlédnout web
+                    </a>
+                </div>
             </div>
         </div>
     </section>
