--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osobní web za zlomek běžné ceny | Dominik Smida</title>
+    <title>Osobní web za zlomek běžné ceny</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Získejte webové stránky za zlomek běžné ceny. Moderní web pro podnikatele - finanční poradce, konzultanty, realitní makléře. Rychlé dodání, profesionální design.">
     <meta name="keywords" content="osobní web, webové stránky, podnikatel, finanční poradce, konzultant, realitní makléř, levný web, rychlý web">
-    <meta name="author" content="Dominik Smida">
+    <meta name="author" content="chciweblevne.eu">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Webové stránky za zlomek běžné ceny">
@@ -90,6 +90,39 @@
             50% { opacity: 0.2; transform: scale(1.1); }
         }
 
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+        }
+
+        @keyframes pulse-glow {
+            0%, 100% { 
+                color: #2563eb; 
+                text-shadow: 0 0 0 rgba(37, 99, 235, 0);
+            }
+            50% { 
+                color: #1d4ed8; 
+                text-shadow: 0 0 20px rgba(37, 99, 235, 0.5);
+            }
+        }
+
+        @keyframes slideInLeft {
+            0%, 100% { transform: translateX(0px); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
+        }
+
+        @keyframes slideInRight {
+            0%, 100% { transform: translateX(0px); }
+            25% { transform: translateX(5px); }
+            75% { transform: translateX(-5px); }
+        }
+
+        @keyframes bounce-gentle {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-8px); }
+        }
+
         .hero-content {
             position: relative;
             z-index: 10;
@@ -105,7 +138,7 @@
             color: #111827;
             margin-bottom: 1.5rem;
             line-height: 1.1;
-            animation: fadeInUp 0.8s ease-out;
+            animation: fadeInUp 0.8s ease-out, float 6s ease-in-out infinite 1s;
             max-width: 48rem;
             margin-left: auto;
             margin-right: auto;
@@ -113,6 +146,7 @@
 
         .hero h1 .highlight {
             color: #2563eb;
+            animation: pulse-glow 3s ease-in-out infinite 2s;
         }
 
         .hero p {
@@ -122,7 +156,7 @@
             max-width: 32rem;
             margin-left: auto;
             margin-right: auto;
-            animation: fadeInUp 0.8s ease-out 0.2s both;
+            animation: fadeInUp 0.8s ease-out 0.2s both, slideInLeft 8s ease-in-out infinite 3s;
         }
 
         .cta-button {
@@ -136,7 +170,7 @@
             font-size: 1.125rem;
             box-shadow: 0 10px 25px rgba(37, 99, 235, 0.3);
             transition: all 0.3s ease;
-            animation: fadeInUp 0.8s ease-out 0.4s both;
+            animation: fadeInUp 0.8s ease-out 0.4s both, bounce-gentle 4s ease-in-out infinite 4s;
         }
 
         .cta-button:hover {
@@ -152,7 +186,7 @@
             justify-content: center;
             gap: 2rem;
             color: #6b7280;
-            animation: fadeInUp 0.8s ease-out 0.6s both;
+            animation: fadeInUp 0.8s ease-out 0.6s both, slideInRight 10s ease-in-out infinite 5s;
         }
 
         .trust-indicator {
@@ -165,11 +199,32 @@
             width: 0.5rem;
             height: 0.5rem;
             border-radius: 50%;
+            animation: pulse-dot 2s ease-in-out infinite;
         }
 
-        .trust-indicator .dot.green { background: #10b981; }
-        .trust-indicator .dot.blue { background: #3b82f6; }
-        .trust-indicator .dot.cyan { background: #06b6d4; }
+        .trust-indicator .dot.green { 
+            background: #10b981; 
+            animation-delay: 0s;
+        }
+        .trust-indicator .dot.blue { 
+            background: #3b82f6; 
+            animation-delay: 0.5s;
+        }
+        .trust-indicator .dot.cyan { 
+            background: #06b6d4; 
+            animation-delay: 1s;
+        }
+
+        @keyframes pulse-dot {
+            0%, 100% { 
+                transform: scale(1); 
+                opacity: 1; 
+            }
+            50% { 
+                transform: scale(1.3); 
+                opacity: 0.7; 
+            }
+        }
 
         /* Benefits Section */
         .benefits {
